--- a/resources/css/style1.css
+++ b/resources/css/style1.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
   color: rgba(232, 85, 85, 1);
 }
 
