--- a/resources/css/style1.css
+++ b/resources/css/style1.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: rgba(232, 85, 85, 1);
 }
 
@@ -190,6 +190,10 @@ small {
 
 #aiicon4 {
   margin-left: 177.5px;
+}
+
+.clearfix {
+  zoom: 1;
 }
 
 #icon-openglass-2 {
