--- a/resources/css/style1.css
+++ b/resources/css/style1.css
@@ -120,13 +120,37 @@ h3 {
   overflow: hidden;
 }
 
-.icon {
+/* .icon {
   font-size: 11px;
   position: absolute;
   bottom: 6%;
   margin-right: 11%;
   padding: 0px 2px;
   border: solid 1px rgba(232, 85, 85, 1);
+} */
+
+.icon {
+  font-size: 8px;
+  position: relative;
+  margin-bottom: 3px;
+  float: left;
+  margin-right: 2px;
+  border: solid 1px rgba(232, 85, 85, 1);
+  display: block;
+}
+
+.tags {
+  position: absolute;
+  /* bottom: 110px; */
+  padding: none;
+  bottom: 10px;
+}
+
+.buzzline {
+  font-size: 12px;
+  padding-right: 40px;
+  position: absolute;
+  bottom: 50px;
 }
 
 .icon-upstream {
@@ -144,9 +168,6 @@ h3 {
 
 h6 {
   font-size: 13px;
-}
-
-#aiicon1 {
 }
 
 small {
@@ -180,16 +201,10 @@ small {
   margin-right: 140px;
 }
 
-#aiicon2 {
-  margin-left: 65px;
-}
-
-#aiicon3 {
-  margin-left: 155px;
-}
-
-#aiicon4 {
-  margin-left: 177.5px;
+#buzzline-upstream {
+  text-align: end;
+  padding-left: 50px;
+  padding-bottom: 10px;
 }
 
 .clearfix {
